[gd_scene load_steps=15 format=2]

[ext_resource path="res://solar_system/space_background.png" type="Texture" id=1]
[ext_resource path="res://solar_system/solar_system.gd" type="Script" id=2]
[ext_resource path="res://gui/loading_screen.gd" type="Script" id=3]
[ext_resource path="res://gui/hud.gd" type="Script" id=4]
[ext_resource path="res://addons/SIsilicon.vfx.lens flare/lens-flare.gd" type="Script" id=5]
[ext_resource path="res://gui/fonts/hack_regular_16_dynamic_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://gui/mouse_capture.tscn" type="PackedScene" id=7]
[ext_resource path="res://voxel_debug_info.gd" type="Script" id=8]
[ext_resource path="res://addons/SIsilicon.vfx.lens flare/lens-dirt-default.jpeg" type="Texture" id=9]
[ext_resource path="res://gui/crosshair.png" type="Texture" id=10]
[ext_resource path="res://gui/select_rect.png" type="Texture" id=11]
[ext_resource path="res://waypoints/waypoint_hud.tscn" type="PackedScene" id=12]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 18.0
glow_enabled = true
glow_levels/5 = false
glow_levels/6 = true
glow_levels/7 = true
glow_intensity = 1.0
glow_blend_mode = 0
glow_hdr_threshold = 0.8
glow_bicubic_upscale = true

[node name="GameWorld" type="Node"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="SpawnPoint" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12000, 0, 0 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetPlanetLabel" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 6 )
text = "Hello world"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetPlanetRect" type="NinePatchRect" parent="HUD"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 309.539
margin_top = 220.355
margin_right = 472.539
margin_bottom = 357.355
texture = ExtResource( 11 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="CenterContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/Crosshair"]
margin_left = 496.0
margin_top = 284.0
margin_right = 528.0
margin_bottom = 316.0
mouse_filter = 2
texture = ExtResource( 10 )
stretch_mode = 4

[node name="WaypointHUD" parent="HUD" instance=ExtResource( 12 )]

[node name="LensFlare" type="Node" parent="."]
script = ExtResource( 5 )
flareStrength = 4.0
flareBias = 0.95
flareBlur = 3.0
distortionQuality = 0
distortion = 7.422
ghostCount = 7
ghostSpacing = 0.3
haloWidth = 0.449
lensDirt = ExtResource( 9 )

[node name="MouseCapture" parent="." instance=ExtResource( 7 )]
capture_mouse_in_ready = false

[node name="LoadingScreen" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.65098 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC" type="CenterContainer" parent="LoadingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="LoadingScreen/CC"]
margin_left = 105.0
margin_top = 277.0
margin_right = 919.0
margin_bottom = 323.0

[node name="VB" type="VBoxContainer" parent="LoadingScreen/CC/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 807.0
margin_bottom = 39.0
rect_min_size = Vector2( 800, 0 )

[node name="Label" type="Label" parent="LoadingScreen/CC/PC/VB"]
margin_right = 800.0
margin_bottom = 14.0
text = "Loading..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="LoadingScreen/CC/PC/VB"]
margin_top = 18.0
margin_right = 800.0
margin_bottom = 32.0
max_value = 1.0

[node name="VoxelDebugInfo" type="Node" parent="."]
script = ExtResource( 8 )

[connection signal="loading_progressed" from="." to="LoadingScreen" method="_on_GameWorld_loading_progressed"]
